manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: portfolio
spec:
  ports:
    - port: 8080
  selector:
    app: nginx
